# NeuSim

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
configs/chips/: tpuv2.json  tpuv3.json  tpuv4.json  tpuv5e.json  tpuv5p.json  tpuv6e.json  tpuv6p.json
configs/models/: deepseekv2-236b.json  deepseekv3-671b.json  dit-xl.json  dlrm-l.json  dlrm-m.json  dlrm-s.json  gligen.json  llama2-13b.json  llama3-70b.json  llama3-8b.json  llama3_1-405b.json
neusim/: __init__.py
neusim/configs/chips/: ChipConfig.py
neusim/configs/models/: DLRMConfig.py  DiTConfig.py  GLIGENConfig.py  LLMConfig.py  ModelConfig.py
neusim/configs/systems/: SystemConfig.py
neusim/npusim/backend/: npusim_lib.py  util.py
neusim/npusim/backend/tests/: test_util.py
neusim/npusim/frontend/: Operator.py  dit_ops_generator.py  dlrm_ops_generator.py  dvfs_policy_lib.py  dvfs_power_getter.py  gligen_ops_generator.py  llm_ops_generator.py  llm_ops_lib.py  memory_footprint_analysis_lib.py  op_analysis_lib.py  power_analysis_lib.py  query_results_helper_lib.py  run_sim_lib.py  run_single_op.py  util.py
neusim/run_scripts/: carbon_analysis_main.py  energy_operator_analysis_main.py  example_npusim.sh  new_model_example.ipynb  run_power_gating.sh  run_power_gating_sensitivity_analysis.sh  run_sim.py  run_single_op_main.py  runtime_env.json  single_model_example.ipynb  slo_analysis_main.py
neusim/xla_hlo_parser/: XLA_HLO.md  xla_hlo_structures.py  xla_hlo_trace_parser.py
