[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "neusim"
authors = [{name = "Yuqi Xue", email = "yuqixue2@illinois.edu"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

dependencies = [
    "absl-py==2.1.0",
    "numpy==1.26.4",
    "pydantic==2.10.6",
    "matplotlib==3.9.2",
    "parallelbar==2.5",
    "ray[default]==2.46.0",
    "scipy==1.15.3",
    "tqdm==4.66.5",
    "pandas==2.1.4",
    "pyarrow==20.0.0",
    "joblib==1.5.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0"
]